--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -7,6 +7,7 @@
                 </p>
                 Hello! I am WaveMaker.
             </wm-html>
+            <wm-button name="button1"></wm-button>
         </wm-page-content>
     </wm-content>
 </wm-page>
