--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -8,6 +8,7 @@
                 Hello! I am WaveMaker.
             </wm-html>
             <wm-button name="button1"></wm-button>
+            <wm-button name="button2"></wm-button>
         </wm-page-content>
     </wm-content>
 </wm-page>
