--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -9,6 +9,7 @@
             </wm-html>
             <wm-button name="button1"></wm-button>
             <wm-button name="button2"></wm-button>
+            Hello! I am WaveMaker.
         </wm-page-content>
     </wm-content>
 </wm-page>
